modificando linguagem para liguagem

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             Ele vale um alto preço.
         </p>
         <p>
-            Pra piorar a linguagem<br>
+            Pra piorar a liguagem<br>
             O emoticom é um risco<br>
             Tem símbolo para tudo<br>
             Ponto e vírgula e um asterisco<br>
